file f cours dans add cours w server.js w app.ts << cle :tx >>

--- a/e-learning-testsp8-06-05/frontend/src/app/backoffice/backoffice.component.html
+++ b/e-learning-testsp8-06-05/frontend/src/app/backoffice/backoffice.component.html
@@ -28,7 +28,8 @@
                 </li>
                 <li><a class="logout mega-menu" (click)="logout()"><i class="zmdi zmdi-power"></i></a></li>
                 <!-- <li class=""><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i
-                            class="zmdi zmdi-settings zmdi-hc-spin"></i></a></li> -->
+                            class="zmdi zmdi-settings zmdi-hc-spin"></i></a></li>  <i class='fa fa-bell blue-color'></i>-->
+                            <li><a class='fa fa-bell blue-color' (click)="logout()"></a></li>           
             </ul>
         </div>
     </nav>
