--- a/e-learning-testsp8-06-05/frontend/src/app/Etablissements/Enseignant/templ-enseignant/cours/add-cours/add-cours.component.html
+++ b/e-learning-testsp8-06-05/frontend/src/app/Etablissements/Enseignant/templ-enseignant/cours/add-cours/add-cours.component.html
@@ -100,7 +100,7 @@
                                         
                                           </div>
                                         </div>
-
+                                        <i class='fa fa-bell blue-color'></i>
                                             <div class="form-group row mb-4">
                                                 <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Fichier
                                                    </label>
@@ -111,6 +111,8 @@
 
                                                         <div *ngIf="submitted && fval_2.file.errors" class="invalid-feedback">
                                                             <div *ngIf="fval_2.file.errors.required">Champs obligatoire</div>
+                                                            <div *ngIf="fval_2.file.errors.pattern">Ce champs doit contenir seulement des
+                                                                chiffres.</div>
                                                         </div>
                                                 </div>
                                                
