--- a/e-learning-testsp8-06-05/frontend/src/app/backoffice/user-list/add-user/add-user.component.scss
+++ b/e-learning-testsp8-06-05/frontend/src/app/backoffice/user-list/add-user/add-user.component.scss
@@ -135,7 +135,7 @@ button .btn .dropdown-toggle {
 
 
 .form-control1{
-  width: 361%!important;
+  width: 674px !important;
   padding-left: 50px!important;
   border: 1px solid  #E3E3E3;
   padding: 6px;
