--- a/e-learning-testsp8-06-05/frontend/src/app/Etablissements/Enseignant/templ-enseignant/templ-enseignant.component.html
+++ b/e-learning-testsp8-06-05/frontend/src/app/Etablissements/Enseignant/templ-enseignant/templ-enseignant.component.html
@@ -109,7 +109,7 @@
               </li>
                  
                 
-        <li routerLinkActive="active open"> <a href="javascript:void(0);" class="menu-toggle">
+        <li routerLinkActive="active open"> <a href="javascript:" class="menu-toggle">
                     <i class="zmdi zmdi-calendar-note"></i>
            <span>Classes </span>
             </a>
@@ -121,9 +121,7 @@
                        </ul>
                         </li>
 
-        <li routerLinkActive="active open"> <a href="javascript:void(0);" class="menu-toggle"><i
-                class="zmdi zmdi-file"></i><span>Doucuments</span>
-        </a>
+        <li routerLinkActive="active open">pppp
         <ul class="ml-menu">
 
             <li routerLinkActive="active open" routerLink="doucuments/addDoucument" 
