--- a/e-learning-testsp8-06-05/frontend/src/app/backoffice/backoffice.component.html
+++ b/e-learning-testsp8-06-05/frontend/src/app/backoffice/backoffice.component.html
@@ -35,6 +35,12 @@
     </nav>
 
     <!-- Left Sidebar -->
+    
+      <section class="_3T2HVoRLE4XDEy js-react-root" data-test-id="header-notifications-popover" data-elevation="1" style="position: fixed; width: 432px; will-change: top, left; top: 48px; left: 1100px;">
+        <header class="_2UGtCq06p3VEd4">
+            <div class="_2rY5DLIOkAg_j2" title="Notifications">Notificationq</div>
+        </header>
+    </section>
     <aside id="leftsidebar" class="sidebar">
         <div class="menu">
             <ul class="list">
