--- a/e-learning-testsp8-06-05/frontend/src/app/backoffice/backoffice.component.scss
+++ b/e-learning-testsp8-06-05/frontend/src/app/backoffice/backoffice.component.scss
@@ -57,3 +57,27 @@
 .theme-cyan .navbar {
   background: #f9656b !important;
 }
+
+._3T2HVoRLE4XDEy {
+
+   
+
+    position: fixed;
+    width: 432px;
+    will-change: top, left;
+    top: 48px;
+    left: 1100px;
+    color: #172b4d;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    background-color: #ffffff;
+    border-radius: 3px;
+    box-shadow: 0 8px 16px -4px rgb(9 30 66 / 25%), 0 0 0 1px rgb(9 30 66 / 8%);
+    box-sizing: border-box;
+    outline: 0;
+    overflow: hidden;
+
+
+}
