--- a/e-learning-testsp8-06-05/frontend/src/app/backoffice/user-list/add-user/add-user.component.html
+++ b/e-learning-testsp8-06-05/frontend/src/app/backoffice/user-list/add-user/add-user.component.html
@@ -91,11 +91,31 @@
                                                 </div>
                                             </div>
 
+
+                                            <div class="form-group row mb-4">
+                                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Confirmer le mot de passe
+                                                   </label>
+                                                <div class="col-sm-12 col-md-7">
+                                                    <input type="password" formControlName="confirmpassword" class="form-control" 
+                                                        placeholder="Confirmer le mot de passe "
+                                                        [ngClass]="{ 'is-invalid': submitted && fval_2.confirmpassword.errors }" />  
+                                                        
+                                                        <div *ngIf="submitted && fval_2.confirmpassword.errors" class="invalid-feedback">
+                                                            <div *ngIf="fval_2.confirmpassword.errors.pattern">Le Mot de passe de avoir au moinns 8 caractéres telque au moins un lettre minuscule
+                                                                et Lettre  majuscule et un chiffre
+                                                                
+                                                               </div>
+                                                            <div *ngIf="fval_2.confirmpassword.errors.required">Champs obligatoire</div>
+                                                            <div *ngIf="fval_2.confirmpassword.errors.mustMatch">Passwords must matcH</div>
+                                                        </div>
+                                                </div>
+                                            </div>
+
                                             <div class="form-group row mb-4">
                                                 <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Numéro Téléphone
                                                    </label>
                                                 <div class="col-sm-12 col-md-7">
-                                                    <input ng2TelInput [ng2TelInputOptions]="{initialCountry: 'BE'}" (countryChange)="onCountryChange($event)" id="tel" type="text" formControlName="phone" class="form-control1" 
+                                                    <input ng2TelInput [ng2TelInputOptions]="initialContry" (countryChange)="onCountryChange($event)" id="tel" type="text" formControlName="phone" class="form-control1" 
                                                         placeholder="Entrez le numéro Téléphone du l'utilisateur" 
                                                        [ngClass]="{ 'is-invalid': submitted && fval_2.phone.errors }"  />  
                                                        
