--- a/e-learning-testsp8-06-05/frontend/src/app/backoffice/user-list/update-user/update-user.component.html
+++ b/e-learning-testsp8-06-05/frontend/src/app/backoffice/user-list/update-user/update-user.component.html
@@ -90,6 +90,25 @@
                                             </div>
 
                                             <div class="form-group row mb-4">
+                                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Confirmer le mot de passe
+                                                   </label>
+                                                <div class="col-sm-12 col-md-7">
+                                                    <input type="password" formControlName="confirmpassword" class="form-control" 
+                                                        placeholder="Confirmer le mot de passe "
+                                                        [ngClass]="{ 'is-invalid': submitted && fval_2.confirmpassword.errors }" />  
+                                                        
+                                                        <div *ngIf="submitted && fval_2.confirmpassword.errors" class="invalid-feedback">
+                                                            <div *ngIf="fval_2.confirmpassword.errors.pattern">Le Mot de passe de avoir au moinns 8 caractéres telque au moins un lettre minuscule
+                                                                et Lettre  majuscule et un chiffre
+                                                                
+                                                               </div>
+                                                            <div *ngIf="fval_2.confirmpassword.errors.required">Champs obligatoire</div>
+                                                            <div *ngIf="fval_2.confirmpassword.errors.mustMatch">Passwords must matcH</div>
+                                                        </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group row mb-4">
                                                 <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">phone
                                                    </label>
                                                 <div class="col-sm-12 col-md-7">
